@@ -7,7 +7,7 @@ This file is generated! See scripts/docs_collector.py
 
 beta[]
 
-The Aerospike module uses the http://www.aerospike.com/docs/reference/info[Info command] to collect metrics.
+The Aerospike module uses the http://www.aerospike.com/docs/reference/info[Info command] to collect metrics. The default metricset is `namespace`.
 
 [float]
 === Compatibility
@@ -25,9 +25,6 @@ in <<configuration-metricbeat>>. Here is an example configuration:
 ----
 metricbeat.modules:
 - module: aerospike
-  metricsets: ["namespace"]
-  enabled: false
-  period: 10s
   hosts: ["localhost:3000"]
 ----
 
